# CORE3D

./: .clang-format  CMakeLists.txt  README.md
include/: Camera.h  Character.h  EBO.h  GlobalConstants.h  Mesh.h  Model.h  PostProcessFrameBuffer.h  ShadowMap.h  Skybox.h  Texture.h  VAO.h  VBO.h  shaderClass.h
include/ds/: DrawObjects.h  VAO.h
include/fs/: Camera.h  Mesh.h  Model.h  PostProcessFrameBuffer.h  ShadowMap.h  Skybox.h  Texture.h
include/glad/: glad.h
include/gs/: Character.h  Mirror.h
resources/models/bunker/: license.txt  scene.gltf
resources/models/mirror_blender/: mirror.gltf
resources/models/spaceship/: scene.gltf
resources/models/stylized_big_sword/: license.txt  scene.gltf
resources/shaders/: default.frag  default.geom  default.vert  framebuffer.frag  framebuffer.vert  grass.frag  mirror.vert  outlining.vert  player.frag  skybox.frag  texture.frag  windows.frag
resources/shaders/debugging/: normals.frag  normals.geom  normals.vert  shadow-debug.frag
resources/shaders/effects/: explosion.geom
resources/shaders/instancing/: asteroid.vert
resources/shaders/post-processing/: anti-aliasing-mirror.frag  anti-aliasing.frag  framebuffer.frag  framebuffer.vert  post-processor.frag
resources/shaders/shadowmaps/: shadowMap.vert
resources/shaders/skybox/: reflection.frag  refraction.frag  skybox.frag  skybox.vert
src/: Camera.cpp  Character.cpp  EBO.cpp  Mesh.cpp  Model.cpp  Skybox.cpp  Texture.cpp  VAO.cpp  VBO.cpp  glad.c  main.cpp  shaderClass.cpp
src/dataStructures/: EBO.cpp  VAO.cpp  VBO.cpp
src/fundamentalStructures/: Camera.cpp  Mesh.cpp  Model.cpp  PostProcessFrameBuffer.cpp  ShadowMap.cpp  Skybox.cpp  Texture.cpp  shaderClass.cpp
src/gameStructures/: Character.cpp  Mirror.cpp
src/libraries/: stb.cpp
